[package]
name = "biglisp-core"
version.workspace = true
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
# description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
# license = { workspace = true }

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
